fix(fullwidth): remove container-pad subtraction causing horizontal overflow & double scrollbars

--- a/inc/hm-blocks/blocks/product-tabs/style.css
+++ b/inc/hm-blocks/blocks/product-tabs/style.css
@@ -34,8 +34,9 @@
 	.hmpro-product-tabs.is-fullwidth {
 	  width: 100vw;
 	  max-width: none;
-	  margin-left: calc(50% - 50vw - var(--hmpro-container-pad, 0px));
-	  margin-right: calc(50% - 50vw - var(--hmpro-container-pad, 0px));
+	  margin-left: calc(50% - 50vw);
+	  margin-right: calc(50% - 50vw);
+	  overflow-x: clip;
 	}
 
 .hmpro-pft__tabs,
