--- a/inc/hm-blocks/blocks/promo-grid/style.css
+++ b/inc/hm-blocks/blocks/promo-grid/style.css
@@ -23,8 +23,10 @@
 
 .hmpro-promo-grid.hmpro-pg--fullwidth {
   width: 100vw;
-  margin-left: calc(50% - 50vw - var(--hmpro-container-pad, 0px));
-  margin-right: calc(50% - 50vw - var(--hmpro-container-pad, 0px));
+  max-width: 100vw;
+  margin-left: calc(50% - 50vw);
+  margin-right: calc(50% - 50vw);
+  overflow-x: clip;
 }
 
 .hmpro-pg__inner {
